tests/diagnostics/file_roles/main_entrypoint/return_non_nil/expect.txt
# exit: 1
main.bin.coppice:1:20: error: main in .bin.coppice must return nil
  function main() -> int64 {
                     ^
